--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   body{
     width: 100%;
     height: 100vh;
-    font: "Roboto";
+    font-family: "Roboto";
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,7 +60,7 @@
   .container {
     width: 800px;
     height: 500px;
-    background: linear-gradient(rgba(45, 85, 255, 0.5), rgba(45, 85, 255, 0.5)),
+    background: linear-gradient(rgba(45, 85, 255, 0.7), rgba(45, 85, 255, 0.7)),
       url("images/headset.png");
     background-position: center;
     background-size: cover;
@@ -69,13 +69,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: #fff;
     border-radius: 50px;
-    opacity: .6;
     font-family: "Roboto";
+    opacity: .7;
   }
   
   h1 {
     color: white;
+    font-weight: 700;
     font-size: 2rem;
   }
   
@@ -102,7 +104,7 @@
   }
 
 .audio{
-    opacity: .6;
+    opacity: .5;
 }
   .particle {
     opacity: 0;
@@ -162,14 +164,14 @@
       padding: 8px;
       box-shadow: 2px 2px 2px 2px rgba(125, 18, 255, 0.9);
       border-radius: .5rem;
+      opacity: .6;
     }
     h1 {
       font-size: 1.5rem;
       text-align: center;
       font-weight: 600;
-      color: #000;
-      opacity: 4;
-      background-color: black;
+      color: #fff;
+      opacity: 6;
       word-spacing: 2px;
       
     }
